Closed Bug 1987759 Opened 1 year ago Closed 1 year ago

Startup Crash [@ nsMsgFilter::GetNeedsMessageBody ]

Categories

(Thunderbird :: Filters, defect)

Thunderbird 143
Unspecified
All
defect

Tracking

(thunderbird_esr140 unaffected, thunderbird143 fixed)

RESOLVED FIXED
144 Branch
Tracking Status
thunderbird_esr140 --- unaffected
thunderbird143 --- fixed

People

(Reporter: mkmelin, Assigned: mkmelin)

References

(Regression)

Details

(Keywords: regression)

Crash Data

Attachments

(1 file)

Crash at [@ nsMsgFilter::GetNeedsMessageBody ] - like bp-adc9cdf0-0ebe-47d8-923e-8c09a0250909 - xref bug 1976182 comment 19

Crash report: https://crash-stats.mozilla.org/report/index/adc9cdf0-0ebe-47d8-923e-8c09a0250909

Reason:

SIGSEGV / SEGV_MAPERR

Top 10 frames:

0  libxul.so  nsMsgFilter::GetNeedsMessageBody(bool*)  mailnews/search/src/nsMsgFilter.cpp:614
1  libxul.so  nsMsgFilterList::DoFiltersNeedMessageBody(int, bool*)  mailnews/search/src/nsMsgFilterList.cpp:1217
2  libxul.so  nsImapMailFolder::UpdateFolderWithListener(nsIMsgWindow*, nsIUrlListener*)  mailnews/imap/src/nsImapMailFolder.cpp:649
3  libxul.so  nsImapMailFolder::GetNewMessages(nsIMsgWindow*, nsIUrlListener*)  mailnews/imap/src/nsImapMailFolder.cpp:2322
4  libxul.so  nsImapIncomingServer::PerformBiff(nsIMsgWindow*)  mailnews/imap/src/nsImapIncomingServer.cpp:875
5  libxul.so  NS_InvokeByIndex
6  libxul.so  CallMethodHelper::Invoke()  js/xpconnect/src/XPCWrappedNative.cpp:1620
6  libxul.so  CallMethodHelper::Call()  js/xpconnect/src/XPCWrappedNative.cpp:1174
6  libxul.so  XPCWrappedNative::CallMethod(XPCCallContext&, XPCWrappedNative::CallMode)  js/xpconnect/src/XPCWrappedNative.cpp:1120
7  libxul.so  XPC_WN_CallMethod(JSContext*, unsigned int, JS::Value*)  js/xpconnect/src/XPCWrappedNativeJSOps.cpp:966

First crash is bp-396a631e-6aa8-4eff-8b87-bce1c0250807 2025-08-07 Thunderbird 143.0a1 20250807101307
Most uptime are <= 6 seconds.

So not a regression?

There are more crash signatures with nsImapMailFolder::UpdateFolderWithListener on the stack:

OS: Unspecified → All
Summary: Crash [@ nsMsgFilter::GetNeedsMessageBody ] → Startup Crash [@ nsMsgFilter::GetNeedsMessageBody ]
Version: unspecified → Thunderbird 143
Target Milestone: --- → 144 Branch

Pushed by john@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/dcacd1a59c6d
Fix crash [@ nsMsgFilter::GetNeedsMessageBody ]. r=tobyp

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED

Comment on attachment 9512369 [details]
Bug 1987759 - Fix crash [@ nsMsgFilter::GetNeedsMessageBody ]. r=#thunderbird-back-end-reviewers

Uplift Approval Request

  • Please state case for uplift consideration and ensure bug severity is set: Crash, regression
  • User impact if declined: May crash
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Daily?: Yes
  • Has the fix been verified in Beta?: No
  • Needs manual test from QA?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Null check
  • Does the fix cause any migrations to be skipped?: No
  • String changes made/needed: none
Attachment #9512369 - Flags: approval-comm-beta?

Comment on attachment 9512369 [details]
Bug 1987759 - Fix crash [@ nsMsgFilter::GetNeedsMessageBody ]. r=#thunderbird-back-end-reviewers

[Triage Comment]
This was included in this week's merge of cc->beta

Attachment #9512369 - Flags: approval-comm-beta? → approval-comm-beta-

This crash is no longer showing up for 144.0b1. Want to uplift to 143.0.1 (Sep 30)?

Flags: needinfo?(mkmelin+mozilla)

Actually let's cut a point release today instead of waiting. This affects approximately .45% of users and they don't appear to have a work-around.

Comment on attachment 9512369 [details]
Bug 1987759 - Fix crash [@ nsMsgFilter::GetNeedsMessageBody ]. r=#thunderbird-back-end-reviewers

[Triage Comment]
Approved for release

Attachment #9512369 - Flags: approval-comm-release+
Flags: needinfo?(mkmelin+mozilla)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: