Bug 1987759 - Fix crash [@ nsMsgFilter::GetNeedsMessageBody ]. r=tobyp

https://searchfox.org/comm-central/rev/ddf2f4c45cede0aaab17c48962a320af37bf7363/mailnews/search/src/nsMsgFilterService.cpp#1071

Differential Revision: https://phabricator.services.mozilla.com/D264285

--HG--
extra : rebase_source : d0e38bccbf6d5b1f82f44a345676bcc2ae37fde7